resolved fixed nav issues on mobile

--- a/src/components/HomePage/Header/header.module.css
+++ b/src/components/HomePage/Header/header.module.css
@@ -43,7 +43,7 @@ a {
 }
 @media only screen and (max-width: 860px) {
   .p {
-    font-size: 130%;
+    font-size: 110%;
     padding-top: 30%;
   }
 }
