--- a/src/components/UI/Index/index.module.css
+++ b/src/components/UI/Index/index.module.css
@@ -35,7 +35,7 @@ nav {
   }
   .nav .mainNav {
     margin-left: 5%;
-    font-size: 110%;
+    font-size: 120%;
     float: left;
   }
 }
